<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="title_login_page">Are You Ready to Share Your Story?</string>
    <string name="message_login_page">Please fill in your email and password below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="title_welcome_page">Welcome My Story Apps</string>
    <string name="button_register">Register</string>
    <string name="name">Name</string>
    <string name="title_signup_page">Please Complete Your Data</string>
    <string name="menu_logout">Logout</string>
    <string name="invalidEmail">Email Invalid</string>
    <string name="description">Description</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_image">Add Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_description">Description</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Not found image</string>
    <string name="login_imageview">Login ImageView</string>
    <string name="register_imageview">Register ImageView</string>
    <string name="splash_screen_activity">Splash Screen</string>
    <string name="welcome_imageview">Welcome ImageView</string>
    <string name="item_imageview">Item ImageView User</string>
    <string name="logo_story">MY STORY LOGO</string>
    <string name="menu_language">Language</string>
    <string name="detail_imageview">Detail ImageView</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="share_location">Do you want to share your location?</string>
    <string name="password_message">Password cannot be less than 8 characters</string>
    <string name="location_message">Your location was successfully authorized</string>
</resources>