<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.story.AddStoryActivity">

    <ImageView
        android:id="@+id/img_preview_photo"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/add_image"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="7dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_camera_add"
        app:iconTint="@color/darkbrown"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/img_preview_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_preview_photo" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_image_add"
        app:iconTint="@color/darkbrown"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="@+id/img_preview_photo"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/edit_text_description"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="start"
        android:hint="@string/add_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_upload"
        app:iconTint="@color/darkbrown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_description"
        app:layout_constraintStart_toStartOf="@+id/edt_description" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/share_location"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
